[Fix] Navbar, z-index added

--- a/src/player/components/PlayerNavbar.scss
+++ b/src/player/components/PlayerNavbar.scss
@@ -10,6 +10,7 @@
     position: sticky;
     top: 0;
     width: 100%;
+    z-index: 100;
 
     &__arrows{
         display: flex;
